--- a/assets/style/flex.css
+++ b/assets/style/flex.css
@@ -1,3 +1,6 @@
+
+/* HEADER */
+
 .menu {
     display: flex;
     justify-content: space-evenly;
@@ -6,10 +9,87 @@
     column-gap: 33px;
 }
 
+
+/* CATEGORIES */
+
+.categorias__lista {
+    display: flex;
+    flex-direction: column;
+    row-gap: .5rem;
+}
+
+.destaques {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.destaques__barra  {
+    flex-grow: 1;
+}
+
+/* EVENTS */
+
+.eventos__lista {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    justify-content: center;
+}
+
+.eventos__item {
+    flex-grow: 1;
+    max-width: 400px;
+}
+
+.agenda__lista {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 1rem;
+    column-gap: 1.5rem;
+    justify-content: center;
+}
+
+.agenda__item {
+    flex-grow: 1;
+}
+
+/* FOOTER */
+
+.rodape {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.rodape__logo {
+    align-self: end;
+}
+
+
+
 @media (min-width: 720px) {
     
+    /* HEADER */
+
     .menu {
         column-gap: 75px;
+    }
+
+    /* CATEGORIES */
+
+    .categorias__lista {
+        flex-wrap: wrap;
+        column-gap: 1.5rem;
+        row-gap: 1rem;
+    }
+
+    .eventos__lista {
+        justify-content: end;
+    }
+
+    .agenda__lista {
+        justify-content: end;
     }
 
 }
@@ -42,4 +122,6 @@
     }
 
 }
+
+
 
